--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="icon" href="img/favicon.ico" sizes="any" />
   </head>
   <body
-    class="h-full min-h-screen w-full max-w-[1440px] mx-auto flex flex-col items-center justify-center bg-gradient-to-b from-gray-50 to-[#d2d6db]"
+    class="h-full min-h-screen w-full max-w-[1440px] mx-auto flex flex-col items-center bg-gradient-to-b from-gray-50 to-[#d2d6db] py-[200px]"
   >
     <div
       class="card w-full max-w-[340px] flex flex-col gap-4 bg-white p-6 rounded-lg"
